--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
+
 body {
   background-color: black;
   color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 .title {
