--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,32 @@ body {
 .move-icon {
   height: 50px;
 }
+
+.move-button {
+  background-color: transparent;
+  cursor: pointer;
+  border: 3px solid white;
+  border-radius: 60px;
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  margin-right: 10px;
+}
+
+.result {
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 50px;
+}
+
+.score {
+  margin-top: 60px;
+}
+
+.reset-score-button {
+  background-color: white;
+  border: none;
+  font-size: 15px;
+  padding: 8px 15px;
+  cursor: pointer;
+}
